--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
             </div>
             <h1>Treating the Whole Patient:<br>Spirit, Body, and Soul</h1>
             <p class="hero-subtitle">Compassionate, comprehensive healthcare serving Blue Springs, Jackson County, and the Kansas City Metro</p>
-            <div style="background-color: rgba(44, 82, 130, 0.9); padding: 1rem 2rem; margin: 2rem auto; border-radius: 8px; max-width: 600px;">
-                <p style="font-size: 1.5rem; margin: 0; font-weight: 700; color: #fff; text-align: center; letter-spacing: 1px;">PROUDLY SERVING OUR VETERANS</p>
-            </div>
+            <p class="hero-veteran-message" style="font-size: 1.1rem; margin-top: 1rem; font-weight: 600; color: #fff;">Proudly Serving Our Veterans</p>
             <div class="hero-cta">
                 <a href="tel:816-427-5320" class="cta-button primary">Call (816) 427-5320</a>
                 <a href="#services" class="cta-button secondary">Our Services</a>
