--- a/Index.html
+++ b/Index.html
@@ -601,7 +601,7 @@
 <body>
     <!-- FLOATING LOGO -->
     <div class="floating-logo">
-        <img src="Logo_New_GFM.webp" alt="Garcia Family Medicine">
+        <img src="Logo.png" alt="Garcia Family Medicine">
     </div>
 
     <!-- HEADER -->
@@ -697,7 +697,7 @@
 
             <div class="services-grid">
                 <div class="service-card">
-                    <img src="2.png" alt="Direct Primary Care">
+                    <img src="family_business4_png.jpg" alt="Direct Primary Care">
                     <div class="service-content">
                         <h3>Direct Primary Care</h3>
                         <p><strong>24/7 Access to Your Doctor</strong></p>
@@ -756,7 +756,7 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="3.png" alt="IME Services">
+                    <img src="injury_work_accident6_png.jpg" alt="IME Services">
                     <div class="service-content">
                         <h3>Independent Medical Evaluations</h3>
                         <p><strong>Expert Medical-Legal Assessments</strong></p>
@@ -807,7 +807,7 @@
             <p class="section-subtitle">Compassionate, Faith-Based Family Medicine</p>
             
             <div class="about-content">
-                <img src="Dr__Tess2.png.webp" alt="Dr. Tess Garcia">
+                <img src="Dr__Tess2_png.webp" alt="Dr. Tess Garcia">
                 
                 <div class="about-text">
                     <p>Dr. Tess Garcia founded Garcia Family Medicine with a simple mission: to provide personalized, compassionate healthcare that treats the whole patient—Spirit, Body, and Soul.</p>
@@ -834,6 +834,15 @@
                 </div>
                 <div class="video-testimonial-card">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/wLtblFNMdMA" frameborder="0" allowfullscreen style="border-radius: 8px;"></iframe>
+                </div>
+                <div class="video-testimonial-card">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/h6JlsFF-tp4" frameborder="0" allowfullscreen style="border-radius: 8px;"></iframe>
+                </div>
+                <div class="video-testimonial-card">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/jVVtcVwQZwM" frameborder="0" allowfullscreen style="border-radius: 8px;"></iframe>
+                </div>
+                <div class="video-testimonial-card">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/xspHr7i8StU" frameborder="0" allowfullscreen style="border-radius: 8px;"></iframe>
                 </div>
             </div>
 
