--- a/Index.html
+++ b/Index.html
@@ -713,7 +713,7 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="CoreLift_Confidence_with_Emsella.jpg" alt="CoreLift Treatment">
+                    <img src="CoreLift_Confidence_with_Emsella.png" alt="CoreLift Treatment">
                     <div class="service-content">
                         <h3>CoreLift Pelvic Health</h3>
                         <p><strong>Revolutionary Non-Invasive Treatment</strong></p>
