--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -713,7 +714,7 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="CoreLift_Confidence_with_Emsella.png" alt="CoreLift Treatment">
+                    <img src="CoreLift_Confidence_with_Emsella.jpg" alt="CoreLift Treatment">
                     <div class="service-content">
                         <h3>CoreLift Pelvic Health</h3>
                         <p><strong>Revolutionary Non-Invasive Treatment</strong></p>
