--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -133,7 +132,7 @@
             <div class="hero-content">
                 <h1 class="hero-title">CoreLift&trade; Pelvic Health</h1>
                 <p class="hero-subtitle">with Emsella</p>
-                <p class="hero-description">Revolutionary FDA-cleared treatment for bladder control and intimate wellness. Non-invasive, comfortable, and highly effective with 95% success rate.</p>
+                <p class="hero-description">Revolutionary FDA-cleared treatment for bladder control and intimate wellness. Non-invasive, comfortable, and highly effective.</p>
                 <a href="#services" class="hero-button">Learn More</a>
             </div>
         </div>
@@ -160,17 +159,6 @@
             </div>
         </div>
 
-        <!-- Welcome Slide with Dr. Tess -->
-        <div class="hero-slide" style="background-image: url('Dr__Tess2_png.webp'); background-size: cover; background-position: center;">
-            <div class="hero-overlay" style="background: linear-gradient(135deg, rgba(30, 58, 138, 0.3) 0%, rgba(234, 88, 12, 0.25) 100%);"></div>
-            <div class="hero-content">
-                <h1 class="hero-title">Welcome to Garcia Family Medicine</h1>
-                <p class="hero-subtitle">Blue Springs, Jackson County & KC Metro</p>
-                <p class="hero-description">Treating the whole patient: Spirit, Body, and Soul. Available 24/7 for your healthcare needs.</p>
-                <a href="tel:816-427-5320" class="hero-button">Call (816) 427-5320</a>
-            </div>
-        </div>
-
         <button class="carousel-button carousel-button-left" onclick="prevSlide()">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <polyline points="15 18 9 12 15 6"></polyline>
@@ -186,8 +174,6 @@
             <button class="dot active" onclick="goToSlide(0)"></button>
             <button class="dot" onclick="goToSlide(1)"></button>
             <button class="dot" onclick="goToSlide(2)"></button>
-            <button class="dot" onclick="goToSlide(3)"></button>
-            <button class="dot" onclick="goToSlide(4)"></button>
         </div>
     </div>
 
@@ -221,12 +207,12 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-photo-container">
-                        <img src="Dr__Tess2_png.webp" alt="Dr. Tess Garcia" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+                        <!-- Photo placeholder - Gigi will provide new image -->
                     </div>
                     <div class="team-content">
                         <h3 class="team-name">Dr. Tess Garcia</h3>
                         <p class="team-title">Board Certified Family Medicine & Obesity Medicine</p>
-                        <p class="team-statement">With over 25 years of experience, I am honored to serve our community with compassionate, comprehensive care. My approach treats the whole patient&mdash;€”spirit, body, and soul&mdash;€”because true health encompasses every aspect of your life.</p>
+                        <p class="team-statement">With over 25 years of experience, I am honored to serve our community with compassionate, comprehensive care. My approach treats the whole patient—spirit, body, and soul—because true health encompasses every aspect of your life.</p>
                     </div>
                 </div>
 
@@ -234,7 +220,7 @@
                     <div class="team-photo-container"></div>
                     <div class="team-content">
                         <h3 class="team-name">Gigi</h3>
-                        <p class="team-title">Practice Manager</p>
+                        <p class="team-title">Practice Manager and Wellness Coach</p>
                         <p class="team-statement">I ensure our practice runs smoothly so that every patient receives exceptional care and attention. My goal is to make your healthcare journey as seamless and comfortable as possible.</p>
                     </div>
                 </div>
@@ -290,6 +276,7 @@
                 <!-- CoreLift -->
                 <div class="service-card">
                     <div class="service-image-container">
+                        <!-- CoreLift Video - Awaiting video embed URL from Gigi -->
                         <img src="CoreLift_Confidence_with_Emsella.png" alt="CoreLift Pelvic Health Treatment" style="width: 100%; border-radius: 8px;">
                     </div>
                     <div class="service-content">
@@ -300,7 +287,6 @@
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Non-invasive</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> No downtime</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> FDA cleared</div>
-                            <div class="benefit-item"><div class="checkmark">&#10003;</div> 95% success rate</div>
                         </div>
                         <a href="#contact" class="service-button">Schedule Consultation</a>
                     </div>
@@ -319,9 +305,8 @@
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Expert analysis</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Detailed reports</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Legal support</div>
-                            <div class="benefit-item"><div class="checkmark">&#10003;</div> Fast turnaround</div>
                         </div>
-                        <button class="service-button">Learn More</button>
+                        <a href="#contact" class="service-button">Request Evaluation</a>
                     </div>
                 </div>
 
@@ -340,7 +325,10 @@
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Proven results</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Ongoing support</div>
                         </div>
-                        <button class="service-button">Learn More</button>
+                        <a href="#nourish-thrive" class="service-button">Learn More</a>
+                        <p style="margin-top: 15px; font-size: 14px; color: #666;">
+                            <em>Includes our comprehensive <a href="#nourish-thrive" style="color: #2c5282; text-decoration: underline;">Nourish & Thrive</a> wellness program</em>
+                        </p>
                     </div>
                 </div>
 
@@ -354,12 +342,11 @@
                         <p class="service-subtitle">Compassionate Support</p>
                         <p class="service-description">Professional counseling for anxiety, depression, and life transitions. Safe, confidential care when you need it most.</p>
                         <div class="benefits-list">
-                            <div class="benefit-item"><div class="checkmark">&#10003;</div> Licensed therapists</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Faith-integrated options</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Flexible scheduling</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Confidential care</div>
                         </div>
-                        <button class="service-button">Learn More</button>
+                        <a href="#contact" class="service-button">Schedule Appointment</a>
                     </div>
                 </div>
 
@@ -376,9 +363,8 @@
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Same-day service</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> FMCSA certified</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Fast results</div>
-                            <div class="benefit-item"><div class="checkmark">&#10003;</div> Walk-ins welcome</div>
                         </div>
-                        <button class="service-button">Learn More</button>
+                        <a href="#contact" class="service-button">Book DOT Physical</a>
                     </div>
                 </div>
 
@@ -392,12 +378,11 @@
                         <p class="service-subtitle">For Teams of 5+</p>
                         <p class="service-description">Comprehensive workplace health solutions tailored for small businesses. Keep your team healthy and productive.</p>
                         <div class="benefits-list">
-                            <div class="benefit-item"><div class="checkmark">&#10003;</div> On-site options</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Custom programs</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Employee wellness</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Cost-effective</div>
                         </div>
-                        <button class="service-button">Learn More</button>
+                        <a href="#contact" class="service-button">Get Started</a>
                     </div>
                 </div>
 
@@ -416,7 +401,7 @@
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Flexible terms</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Easy application</div>
                         </div>
-                        <button class="service-button">Learn More</button>
+                        <a href="https://www.carecredit.com/" target="_blank" rel="noopener noreferrer" class="service-button">Apply Now</a>
                     </div>
                 </div>
             </div>
@@ -427,10 +412,10 @@
     <section id="nourish-thrive" class="nourish-thrive-section">
         <div class="container">
             <h2>Nourish & Thrive</h2>
-            <p class="section-subtitle">Your Partner in Holistic Wellness</p>
+            <p class="section-subtitle">A Comprehensive Component of Medical Weight Management</p>
             
             <div class="nourish-intro">
-                <p>At Garcia Family Medicine, we believe true health goes beyond treating symptoms. Our <strong>Nourish & Thrive</strong> program is designed to help you achieve optimal wellness through personalized nutrition guidance, lifestyle coaching, and comprehensive support.</p>
+                <p>At Garcia Family Medicine, we believe true health goes beyond treating symptoms. Our <strong>Nourish & Thrive</strong> program is an integral part of our Medical Weight Management services, designed to help you achieve optimal wellness through personalized nutrition guidance, lifestyle coaching, and comprehensive support.</p>
             </div>
 
             <div class="nourish-grid">
@@ -514,7 +499,7 @@
             </div>
             <p>
                 <a href="https://www.google.com/search?q=garcia+family+medicine+blue+springs" target="_blank" rel="noopener noreferrer" class="review-link">
-                    Read Our Google Reviews &mdash;†’
+                    Read Our Google Reviews →
                 </a>
             </p>
         </div>
@@ -563,23 +548,23 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen style="border-radius: 8px;"></iframe>
                 </div>
-            </div></div>
+            </div>
 
             <div class="testimonials-grid">
                 <div class="testimonial-card">
                     <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
                     <p class="testimonial-text">"Dr. Tess truly cares about her patients. She takes the time to listen and provides excellent care."</p>
-                    <p class="testimonial-author">&mdash;€” Sarah M.</p>
+                    <p class="testimonial-author">— Sarah M.</p>
                 </div>
                 <div class="testimonial-card">
                     <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
                     <p class="testimonial-text">"The CoreLift treatment has been life-changing. I'm so grateful for this practice!"</p>
-                    <p class="testimonial-author">&mdash;€” Jennifer K.</p>
+                    <p class="testimonial-author">— Jennifer K.</p>
                 </div>
                 <div class="testimonial-card">
                     <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
                     <p class="testimonial-text">"Professional, compassionate, and thorough. Best family medicine practice in Blue Springs!"</p>
-                    <p class="testimonial-author">&mdash;€” Michael R.</p>
+                    <p class="testimonial-author">— Michael R.</p>
                 </div>
             </div>
         </div>
@@ -642,25 +627,25 @@
                 </div>
 
                 <div class="contact-form">
-                    <form >
+                    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
                         <div class="form-group">
                             <label class="form-label">Name *</label>
-                            <input type="text" class="form-input" required placeholder="Your name">
+                            <input type="text" name="name" class="form-input" required placeholder="Your name">
                         </div>
 
                         <div class="form-group">
                             <label class="form-label">Email *</label>
-                            <input type="email" class="form-input" required placeholder="your@email.com">
+                            <input type="email" name="email" class="form-input" required placeholder="your@email.com">
                         </div>
 
                         <div class="form-group">
                             <label class="form-label">Phone</label>
-                            <input type="tel" class="form-input" placeholder="(123) 456-7890">
+                            <input type="tel" name="phone" class="form-input" placeholder="(123) 456-7890">
                         </div>
 
                         <div class="form-group">
                             <label class="form-label">Message *</label>
-                            <textarea class="form-textarea" rows="4" required placeholder="How can we help you?"></textarea>
+                            <textarea name="message" class="form-textarea" rows="4" required placeholder="How can we help you?"></textarea>
                         </div>
 
                         <button type="submit" class="submit-button">Send Message</button>
