--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -276,8 +277,10 @@
                 <!-- CoreLift -->
                 <div class="service-card">
                     <div class="service-image-container">
-                        <!-- CoreLift Video - Awaiting video embed URL from Gigi -->
-                        <img src="CoreLift_Confidence_with_Emsella.png" alt="CoreLift Pelvic Health Treatment" style="width: 100%; border-radius: 8px;">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/3pc60PTMGH8" 
+                        title="Dr. Tess Garcia - CoreLift Pelvic Health Treatment" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen style="border-radius: 8px;"></iframe>
                     </div>
                     <div class="service-content">
                         <h3 class="service-title">CoreLift&trade; Pelvic Health</h3>
