--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -329,6 +329,7 @@
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Ongoing support</div>
                         </div>
                         <a href="#nourish-thrive" class="service-button">Learn More</a>
+                        <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="service-button" style="margin-top: 10px; background-color: #ea580c;">Track Your Progress</a>
                         <p style="margin-top: 15px; font-size: 14px; color: #666;">
                             <em>Includes our comprehensive <a href="#nourish-thrive" style="color: #2c5282; text-decoration: underline;">Nourish & Thrive</a> wellness program</em>
                         </p>
@@ -343,10 +344,11 @@
                     <div class="service-content">
                         <h3 class="service-title">Mental Health Counseling</h3>
                         <p class="service-subtitle">Compassionate Support</p>
-                        <p class="service-description">Professional counseling for anxiety, depression, and life transitions. Safe, confidential care when you need it most.</p>
+                        <p class="service-description">Face the voices from your past telling you that you can't succeed, whether it's at your job, in your love life, or just losing weight. Our counseling program is based on unlearning the lies you have been taught and discovering the truth about yourself, your dreams, and your plans.</p>
                         <div class="benefits-list">
+                            <div class="benefit-item"><div class="checkmark">&#10003;</div> Erasing the wounds of the past</div>
+                            <div class="benefit-item"><div class="checkmark">&#10003;</div> Access to appropriate medications</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Faith-integrated options</div>
-                            <div class="benefit-item"><div class="checkmark">&#10003;</div> Flexible scheduling</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Confidential care</div>
                         </div>
                         <a href="#contact" class="service-button">Schedule Appointment</a>
@@ -463,6 +465,7 @@
                 <h3>Ready to Transform Your Health?</h3>
                 <p>Join our Nourish & Thrive program and take the first step toward lasting wellness.</p>
                 <a href="#contact" class="nourish-button">Start Your Journey Today</a>
+                <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="nourish-button" style="margin-top: 15px; background-color: #ea580c;">Access Your Weight Management App</a>
             </div>
 
             <div class="nourish-benefits">
