--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -329,7 +329,7 @@
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Ongoing support</div>
                         </div>
                         <a href="#nourish-thrive" class="service-button">Learn More</a>
-                        <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="service-button" style="margin-top: 10px; background-color: #ea580c;">Track Your Progress</a>
+                        <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="service-button" style="margin-top: 10px; background: linear-gradient(135deg, #ea580c 0%, #dc2626 100%); box-shadow: 0 8px 16px rgba(234, 88, 12, 0.4), 0 4px 8px rgba(0, 0, 0, 0.2); transform: translateY(0); transition: all 0.3s ease; font-weight: 600; letter-spacing: 0.5px;">📊 Track Your Progress</a>
                         <p style="margin-top: 15px; font-size: 14px; color: #666;">
                             <em>Includes our comprehensive <a href="#nourish-thrive" style="color: #2c5282; text-decoration: underline;">Nourish & Thrive</a> wellness program</em>
                         </p>
@@ -465,7 +465,7 @@
                 <h3>Ready to Transform Your Health?</h3>
                 <p>Join our Nourish & Thrive program and take the first step toward lasting wellness.</p>
                 <a href="#contact" class="nourish-button">Start Your Journey Today</a>
-                <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="nourish-button" style="margin-top: 15px; background-color: #ea580c;">Access Your Weight Management App</a>
+                <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="nourish-button" style="margin-top: 15px; background: linear-gradient(135deg, #ea580c 0%, #dc2626 100%); box-shadow: 0 8px 16px rgba(234, 88, 12, 0.4), 0 4px 8px rgba(0, 0, 0, 0.2); transform: translateY(0); transition: all 0.3s ease; font-weight: 600; letter-spacing: 0.5px;">📱 Access Your Weight Management App</a>
             </div>
 
             <div class="nourish-benefits">
