--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -330,7 +330,7 @@
                         </div>
                         <a href="#nourish-thrive" class="service-button">Learn More</a>
                         <div style="margin-top: 10px;">
-                            <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="hero-button">📊 Track Your Progress</a>
+                            <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="hero-button" style="display: inline-block; width: auto; padding: 12px 24px;">📊 Track Your Progress</a>
                         </div>
                         <p style="margin-top: 15px; font-size: 14px; color: #666;">
                             <em>Includes our comprehensive <a href="#nourish-thrive" style="color: #2c5282; text-decoration: underline;">Nourish & Thrive</a> wellness program</em>
@@ -468,7 +468,7 @@
                 <p>Join our Nourish & Thrive program and take the first step toward lasting wellness.</p>
                 <a href="#contact" class="nourish-button">Start Your Journey Today</a>
                 <div style="margin-top: 15px;">
-                    <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="hero-button">📱 Access Your Weight Management App</a>
+                    <a href="https://garcia-weight-app.netlify.app" target="_blank" rel="noopener noreferrer" class="hero-button" style="display: inline-block; width: auto; padding: 12px 24px;">📱 Access Your Weight Management App</a>
                 </div>
             </div>
 
