--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -208,7 +208,7 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-photo-container">
-                        <!-- Photo placeholder - Gigi will provide new image -->
+                        <img src="Dr_Tess_Emsella.png" alt="Dr. Tess Garcia" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
                     </div>
                     <div class="team-content">
                         <h3 class="team-name">Dr. Tess Garcia</h3>
@@ -218,7 +218,9 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-photo-container"></div>
+                    <div class="team-photo-container">
+                        <img src="Gigi_Orange.png" alt="Gigi" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+                    </div>
                     <div class="team-content">
                         <h3 class="team-name">Gigi</h3>
                         <p class="team-title">Practice Manager and Wellness Coach</p>
@@ -307,7 +309,6 @@
                         <div class="benefits-list">
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Expert analysis</div>
                             <div class="benefit-item"><div class="checkmark">&#10003;</div> Detailed reports</div>
-                            <div class="benefit-item"><div class="checkmark">&#10003;</div> Legal support</div>
                         </div>
                         <a href="#contact" class="service-button">Request Evaluation</a>
                     </div>
