--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -208,7 +208,7 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-photo-container">
-                        <img src="Dr Tess Emsella.png" alt="Dr. Tess Garcia" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+                        <img src="Dr_Tess_Emsella.png" alt="Dr. Tess Garcia" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
                     </div>
                     <div class="team-content">
                         <h3 class="team-name">Dr. Tess Garcia</h3>
