--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -628,7 +628,11 @@
                 </div>
 
                 <div class="contact-form">
-                    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                   <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+                           <input type="hidden" name="form-name" value="contact">
+                           <p style="display:none;">
+                               <label>Don't fill this out if you're human: <input name="bot-field" /></label>
+                           </p>
                         <div class="form-group">
                             <label class="form-label">Name *</label>
                             <input type="text" name="name" class="form-input" required placeholder="Your name">
