--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -116,7 +115,6 @@
       }
     }
     </script>
-    <meta name="description" content="Garcia Family Medicine - Treating the whole patient: Spirit, Body, and Soul. Compassionate healthcare with Dr. Tess Garcia serving Blue Springs, Jackson County, and the Kansas City Metro.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -208,7 +206,7 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-photo-container">
-                        <!-- Photo placeholder - Gigi will provide new image -->
+                        <img src="Dr_Tess_Emsella.png" alt="Dr. Tess Garcia" style="width: 100%; height: 100%; object-fit: cover; border-radius: 8px;">
                     </div>
                     <div class="team-content">
                         <h3 class="team-name">Dr. Tess Garcia</h3>
@@ -218,7 +216,9 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-photo-container"></div>
+                    <div class="team-photo-container">
+                        <img src="Gigi_Orange.png" alt="Gigi" style="width: 100%; height: 100%; object-fit: cover; border-radius: 8px;">
+                    </div>
                     <div class="team-content">
                         <h3 class="team-name">Gigi</h3>
                         <p class="team-title">Practice Manager and Wellness Coach</p>
@@ -277,8 +277,10 @@
                 <!-- CoreLift -->
                 <div class="service-card">
                     <div class="service-image-container">
-                        <!-- CoreLift Video - Awaiting video embed URL from Gigi -->
-                        <img src="CoreLift_Confidence_with_Emsella.png" alt="CoreLift Pelvic Health Treatment" style="width: 100%; border-radius: 8px;">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/3pc60PTMGH8" 
+                        title="CoreLift Treatment with Dr. Tess Garcia" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen style="border-radius: 8px;"></iframe>
                     </div>
                     <div class="service-content">
                         <h3 class="service-title">CoreLift&trade; Pelvic Health</h3>
@@ -677,5 +679,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
